deploy: TorrentDam/laminar-bulma@f56af89c11b05e6063cf278d476cf483377bc3ab

--- a/index-dev.html
+++ b/index-dev.html
@@ -11,10 +11,10 @@
     <link rel="manifest" href="site.webmanifest">
 </head>
 <body>
-<nav class="navbar has-shadow  is-spaced" role="navigation" aria-label="main navigation">
+<nav class="navbar has-shadow is-spaced" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item" href="https://torrentdam.github.io/laminar-bulma/">
+            <a class="navbar-item" href="#">
                 <img src="images/windmill.svg" width="28" height="48">
                 <span class="title">TorrentDam</span>
             </a>
@@ -26,6 +26,6 @@
         <div id="root"></div>
     </div>
 </section>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="../target/scala-2.13/laminar-bulma-fastopt/main.js"></script>
 </body>
 </html>
